Switch to Java 10 and Spring 1.5.14
Dockerfile:
"--add-modules", "java.xml.bind",